calculate pie chart graph with svg circle

--- a/study/index.html
+++ b/study/index.html
@@ -25,7 +25,10 @@
       <circle class="circle3"></circle>
       <circle class="circle4"></circle>
       <circle class="circle5"></circle>
+      
       <circle class="circle6"></circle>
+      <circle class="circle7"></circle>
+      <circle class="circle8"></circle>
     </svg>
       
     <p>3. 텍스트를 그린다.</p>
