--- a/study/index.html
+++ b/study/index.html
@@ -38,22 +38,24 @@
       <text class="text3">stroke</text>
       <text class="text4">
         <tspan class="text--bold">bold text</tspan>
-        <tspan dx="5px">dx 5px</tspan>  
+        <tspan dx="5px">dx 5px</tspan>
         <tspan dy="3px 5px 10px">multiple dy</tspan>
       </text>
       <defs>
           <path id="text-path" d="M0,0 l0,20 a1,1 0 0,0 100,0"/>
       </defs>       
         <!--  active 활성화 가능   -->
-        <g class="text-wrapper active"> 
+        <g class="text-wrapper active">
             <circle class="text-circle"></circle>
             <text class="text5">
                 <textPath xlink:href="#text-path" >Text along a curved path...</textPath>
-            </text>   
-        </g> 
+            </text>
+        </g>
         <text class="text6">
             <a href="http://www.naver.com" >A 태그 네이버로 이동</a>
         </text>
+
+      <text text-anchor="middle"><tspan x="700" dy="22">22</tspan><tspan x="700" dy="22">22</tspan></text>
     </svg>
       
     <p>4. 선을 그린다.</p>
@@ -105,12 +107,11 @@
           </defs>
           <path class="path8" d="M0, 0 
                                  L100,50 
-                                 200,70 
+                                 200,10
                                  300,50 
                                  400,60 
                                  500,90 
-                                 600,10 
-                                 700,30" 
+                                 600,10"
                 marker-start="url(#dot)" marker-mid="url(#dot)" marker-end="url(#dot)"></path>
       </svg>
   </div>
